{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 23,
  "lineage": "d62e0741-b6bb-83b2-f426-1471fc5f4230",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web_app_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/ganesh-project-469710/zones/us-central1-a/instanceGroups/web-app-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-09-08T05:31:55.486-07:00",
            "enable_cdn": false,
            "fingerprint": "4Rmk9J4vh58=",
            "generated_id": 3129477564793582164,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/ganesh-project-469710/global/healthChecks/http-health-check"
            ],
            "id": "projects/ganesh-project-469710/global/backendServices/web-app-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-app-backend-service",
            "port_name": "http",
            "project": "ganesh-project-469710",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ganesh-project-469710/global/backendServices/web-app-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.http_health_check",
            "google_compute_instance_group_manager.web_app_mig",
            "google_compute_instance_template.web_app_template",
            "google_compute_network.web_app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_lb_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-08T05:30:47.101-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ganesh-project-469710/global/firewalls/allow-lb-and-health-check",
            "log_config": [],
            "name": "allow-lb-and-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/ganesh-project-469710/global/networks/web-app-network",
            "priority": 1000,
            "project": "ganesh-project-469710",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ganesh-project-469710/global/firewalls/allow-lb-and-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.web_app_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "web_app_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/ganesh-project-469710/global/forwardingRules/web-app-http-rule",
            "ip_address": "34.8.177.251",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-app-http-rule",
            "port_range": "80",
            "project": "ganesh-project-469710",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ganesh-project-469710/global/forwardingRules/web-app-http-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/ganesh-project-469710/global/targetHttpProxies/web-app-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.web_app_backend_service",
            "google_compute_health_check.http_health_check",
            "google_compute_instance_group_manager.web_app_mig",
            "google_compute_instance_template.web_app_template",
            "google_compute_network.web_app_network",
            "google_compute_target_http_proxy.web_app_http_proxy",
            "google_compute_url_map.web_app_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "web_app_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ganesh-project-469710/global/networks/web-app-network",
            "mtu": 0,
            "name": "web-app-network",
            "project": "ganesh-project-469710",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ganesh-project-469710/global/networks/web-app-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "web_app_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-08T05:33:13.146-07:00",
            "id": "projects/ganesh-project-469710/global/targetHttpProxies/web-app-http-proxy",
            "name": "web-app-http-proxy",
            "project": "ganesh-project-469710",
            "proxy_bind": false,
            "proxy_id": 8222759670575756262,
            "self_link": "https://www.googleapis.com/compute/v1/projects/ganesh-project-469710/global/targetHttpProxies/web-app-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/ganesh-project-469710/global/urlMaps/web-app-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.web_app_backend_service",
            "google_compute_health_check.http_health_check",
            "google_compute_instance_group_manager.web_app_mig",
            "google_compute_instance_template.web_app_template",
            "google_compute_network.web_app_network",
            "google_compute_url_map.web_app_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "web_app_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-08T05:32:50.180-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ganesh-project-469710/global/backendServices/web-app-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "ZihepDLGtZY=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/ganesh-project-469710/global/urlMaps/web-app-url-map",
            "map_id": 1574167729640010269,
            "name": "web-app-url-map",
            "path_matcher": [],
            "project": "ganesh-project-469710",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ganesh-project-469710/global/urlMaps/web-app-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.web_app_backend_service",
            "google_compute_health_check.http_health_check",
            "google_compute_instance_group_manager.web_app_mig",
            "google_compute_instance_template.web_app_template",
            "google_compute_network.web_app_network"
          ]
        }
      ]
    }
  ]
}